updating url
